# dog

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: cli.dog.md  dog-index.dog.md  export.dog.md  get.dog.md  getter.dog.md  graph.dog.md  index.dog.md  lint.dog.md  linter.dog.md  list.dog.md  refs.dog.md  search-result.dog.md  search.dog.md  searcher.dog.md  serve.dog.md  server.dog.md
docs/guides/: agent-workflow.md  cli.md  comparisons.md  getting-started.md  install.md  llm-integration.md
scripts/: build-binary.sh  install.sh
skills/dog/: SKILL.md
skills/dog/agents/: openai.yaml
skills/dog/references/: cli.md
skills/dog/scripts/: ensure-dog.sh
src/dog_cli/: __init__.py  __main__.py  main.py
src/dog_core/: __init__.py  dog_index.py  export.py  getter.py  graph.py  indexer.py  linter.py  refs.py  search.py  server.py
tests/: conftest.py  test_cli.py  test_cli_redesign.py  test_dog_index.py  test_getter.py  test_indexer.py  test_linter.py  test_parser.py  test_search.py  test_server_index.py
